--- a/projeto-devlinks/index.html
+++ b/projeto-devlinks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="light">
+<html lang="pt-br" >
   <head>
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,9 +14,15 @@
   <body>
     <div id="container">
     <div id="profile">
+
       <img src="imagens/perfil-orange.png" alt="imagem de perfil">
       <p>Daniel Cunha</p>
     </div>
+
+    <div id="switch">
+        <button></button>
+      </div>
+
     <ul>
       <li>
         <a href="https://github.com/dancunha99" target="_blank">Ver meu portifólio</a>
