--- a/projeto-devlinks/index.html
+++ b/projeto-devlinks/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" >
+<html lang="pt-br" class="light">
   <head>
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +21,7 @@
 
     <div id="switch">
         <button></button>
+        <span></span>
       </div>
 
     <ul>
